theme: fix text readability on unfocused Chrome/Chromium tabs
https://phabricator.endlessm.com/T23779

--- a/gtk/theme/Adwaita/gtk-contained-dark.css
+++ b/gtk/theme/Adwaita/gtk-contained-dark.css
@@ -2049,7 +2049,7 @@ these are pretty self explicative */
 these colors are exported for the window manager and shouldn't be used in applications,
 read if you used those and something break with a version upgrade you're on your own... */
 @define-color wm_title shade(#eeeeec, 1.8);
-@define-color wm_unfocused_title #919190;
+@define-color wm_unfocused_title #919494;
 @define-color wm_highlight rgba(0, 0, 0, 0);
 @define-color wm_borders_edge rgba(238, 238, 236, 0.07);
 @define-color wm_bg_a shade(#353535, 1.2);
@@ -2062,76 +2062,41 @@ read if you used those and something break with a version upgrade you're on your
 @define-color wm_button_active_color_b shade(#33393b, 0.89);
 @define-color wm_button_active_color_c shade(#33393b, 0.9);
 @define-color content_view_bg #232729;
-headerbar.default-decoration {
-  color: #dfdbd2;
-  background-image: linear-gradient(to bottom, #464646, #1e1e1e);
-  box-shadow: inset 0 -1px #0a0a0a, inset 0 -2px #292929, inset 0 1px  #4d4d4d;
-  border: none;
-  min-height: 36px; }
-  headerbar.default-decoration:dir(rtl) {
-    padding: 0 16px 0 6px; }
-  headerbar.default-decoration:dir(ltr) {
-    padding: 0 6px 0 16px; }
-  headerbar.default-decoration.maximized {
-    box-shadow: inset 0 -1px #0a0a0a, inset 0 -2px #292929; }
-  headerbar.default-decoration:backdrop {
-    color: #807d78;
-    background-image: linear-gradient(to bottom, #282828, #1e1e1e);
-    box-shadow: inset 0 -1px #0a0a0a, inset 0 -2px #292929, inset 0 1px  #303030; }
-    headerbar.default-decoration:backdrop.maximized {
-      box-shadow: inset 0 -1px #0a0a0a, inset 0 -2px #292929; }
-  headerbar.default-decoration button.titlebutton {
-    color: #8c8c8c;
-    background-image: none;
-    border: none;
-    border-image: none;
-    box-shadow: none;
-    background-color: transparent;
-    border-radius: 2px; }
-    headerbar.default-decoration button.titlebutton:hover {
-      color: #dcdcdc;
-      background-image: linear-gradient(to bottom, #838383 2%, #6c6c6c 5%, #444444); }
-    headerbar.default-decoration button.titlebutton:active {
-      color: #787878;
-      background-image: linear-gradient(to bottom, #4f4f4f 2%, #474747 5%, #434343); }
-    headerbar.default-decoration button.titlebutton:backdrop {
-      background-image: none; }
+headerbar.default-decoration { color: #dfdbd2; background-image: linear-gradient(to bottom, #464646, #1e1e1e); box-shadow: inset 0 -1px #0a0a0a, inset 0 -2px #292929, inset 0 1px  #4d4d4d; border: none; min-height: 36px; }
+
+headerbar.default-decoration:dir(rtl) { padding: 0 16px 0 6px; }
+
+headerbar.default-decoration:dir(ltr) { padding: 0 6px 0 16px; }
+
+headerbar.default-decoration.maximized { box-shadow: inset 0 -1px #0a0a0a, inset 0 -2px #292929; }
+
+headerbar.default-decoration:backdrop { color: #807d78; background-image: linear-gradient(to bottom, #282828, #1e1e1e); box-shadow: inset 0 -1px #0a0a0a, inset 0 -2px #292929, inset 0 1px  #303030; }
+
+headerbar.default-decoration:backdrop.maximized { box-shadow: inset 0 -1px #0a0a0a, inset 0 -2px #292929; }
+
+headerbar.default-decoration button.titlebutton { color: #8c8c8c; background-image: none; border: none; border-image: none; box-shadow: none; background-color: transparent; border-radius: 2px; }
+
+headerbar.default-decoration button.titlebutton:hover { color: #dcdcdc; background-image: linear-gradient(to bottom, #838383 2%, #6c6c6c 5%, #444444); }
+
+headerbar.default-decoration button.titlebutton:active { color: #787878; background-image: linear-gradient(to bottom, #4f4f4f 2%, #474747 5%, #434343); }
+
+headerbar.default-decoration button.titlebutton:backdrop { background-image: none; }
 
 /* Set dark background for Chrome and Chromium > 59 top bar */
-.header-bar.chromium {
-  background-image: linear-gradient(to bottom, #464646, #1e1e1e);
-  box-shadow: none; }
+.header-bar.chromium { color: #807d78; background-image: linear-gradient(to bottom, #464646, #1e1e1e); box-shadow: none; }
 
-.header-bar.chromium:backdrop {
-  color: #807d78;
-  background-image: linear-gradient(to bottom, #282828, #1e1e1e); }
+.header-bar.chromium:backdrop { color: #807d78; background-image: linear-gradient(to bottom, #282828, #1e1e1e); }
 
 /* Fix color of window management buttons for Chrome top bar */
-button.titlebutton.chromium {
-  color: #8c8c8c;
-  -gtk-icon-shadow: none; }
+button.titlebutton.chromium { color: #8c8c8c; -gtk-icon-shadow: none; }
 
-button.titlebutton.chromium:hover {
-  color: #dcdcdc;
-  background-image: none;
-  border: none;
-  box-shadow: none; }
+button.titlebutton.chromium:hover { color: #dcdcdc; background-image: none; border: none; box-shadow: none; }
 
-button.titlebutton.chromium:active {
-  color: #787878; }
+button.titlebutton.chromium:active { color: #787878; }
 
 /* Fix color of user button for Chrome top bar */
-.header-bar.chromium button:not(.titlebutton) {
-  border: none;
-  box-shadow: none;
-  background-image: none; }
+.header-bar.chromium button:not(.titlebutton) { border: none; box-shadow: none; background-image: none; }
 
-.header-bar.chromium button:not(.titlebutton):hover {
-  border: none;
-  box-shadow: none;
-  background-color: rgba(78, 78, 78, 0.8); }
+.header-bar.chromium button:not(.titlebutton):hover { border: none; box-shadow: none; background-color: rgba(78, 78, 78, 0.8); }
 
-.header-bar.chromium button:not(.titlebutton):active {
-  border: none;
-  box-shadow: none;
-  background-color: rgba(0, 0, 0, 0.3); }
+.header-bar.chromium button:not(.titlebutton):active { border: none; box-shadow: none; background-color: rgba(0, 0, 0, 0.3); }
